--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ティア表メーカー</title>
-    <style>
+<!Doctype HTML>
+<HTML ラング="そして">
+<頭>
+    <メタ チャーセット="UTF-8">
+    <メタ 名前="ビューポート" コンテンツ="width = device-width、初期スケール=1.0">
+    <タイトル>ティア表メーカー</タイトル>
+    <スタイル>
         * {
             margin: 0;
             padding: 0;
@@ -13,22 +13,22 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #1a1a1a;
+            background: #1A1A1A;
             min-height: 100vh;
             padding: 20px;
-            color: #e0e0e0;
+            color: #E0E0E0;
         }
 
-        .container {
+        .容器 {
             max-width: 1200px;
             margin: 0 auto;
-            background: #2d2d2d;
+            background: #2D2D2D;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.3);
             overflow: hidden;
         }
 
-        .header {
+        .ヘッダ {
             background: #1e1e1e;
             color: white;
             padding: 30px;
