--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!Doctype HTML>
-<HTML ラング="そして">
-<頭>
-    <メタ チャーセット="UTF-8">
-    <メタ 名前="ビューポート" コンテンツ="width = device-width、初期スケール=1.0">
-    <タイトル>ティア表メーカー</タイトル>
-    <スタイル>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ティア表メーカー</title>
+    <style>
         * {
             margin: 0;
             padding: 0;
@@ -13,22 +13,22 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #1A1A1A;
+            background: #1a1a1a;
             min-height: 100vh;
             padding: 20px;
-            color: #E0E0E0;
+            color: #e0e0e0;
         }
 
-        .容器 {
+        .container {
             max-width: 1200px;
             margin: 0 auto;
-            background: #2D2D2D;
+            background: #2d2d2d;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.3);
             overflow: hidden;
         }
 
-        .ヘッダ {
+        .header {
             background: #1e1e1e;
             color: white;
             padding: 30px;
